# tauri-plugin-structure-manager

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: test.yml
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
examples/vanilla/src-tauri/capabilities/: default.json
examples/vanilla/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/autogenerated/: reference.md
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
tauri-plugin-structure-manager/: Cargo.toml
tauri-plugin-structure-manager/examples/tauri-app/: package.json
tauri-plugin-structure-manager/examples/tauri-app/src-tauri/: tauri.conf.json
tauri-plugin-structure-manager/examples/tauri-app/src-tauri/src/: lib.rs
tauri-plugin-structure-manager/src/: commands.rs  lib.rs
tauri-plugin-structure-manager/src/manager/: mod.rs  structure.rs  verification.rs
