[package]
name = "structure-manager-example"
version = "0.1.0"
description = "A Tauri App"
authors = ["Maxence Cosaque (github.com/Maxanox27)"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.18", default-features = false , features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.23", features = [] }
tauri-plugin-structure-manager = { path = "../../../" }
